# PyActiveStorage

./: .gitignore  .readthedocs.yaml  PCI_wrapper.py  PERFORMANCE_STATUS.md  README.md  README_testing.md  active_tools.py  chunks_slices.py  codecov.yml  core.py  dummy_data.py  environment.yml  indexer_for_selection.md  nc_zarr.py  netcdf_to_zarr.py  pas_testing_bnl_4vs.tgz  pyproject.toml  requirements.py  setup.cfg  setup.py  stack_explained.md  storage.py  test_fillvalue.nc  test_harness.py  test_missing.nc  test_validmax.nc  test_validmin.nc  test_validrange.nc  test_vanilla.nc  varsiha.py  zarr getitem.md
.github/: pull_request_template.md
.github/workflows/: build-and-deploy-on-pypi.yml  create-condalock-file.yml  install-from-condalock-file.yml  run-s3-test-push.yml  run-test-push.yml  run-tests-condaforge.yml  run-tests-nginx.yml  run-tests.yml  s3_connect.yml  test_s3_minio.yml  test_s3_minio_netcdf4.yml  test_s3_remote_reductionist.yml
PyActiveStorage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
activestorage/: __init__.py  active.py  active2.py  active_tools.py  backends.py  bootstrap.py  config-Posix-storage.yml  config-s3-storage.yml  config.py  core.py  dummy_data.py  formats.py  hdf2numcodec.py  helpers.py  netcdf_to_zarr.py  reductionist.py  s3.py  session.py  storage.py  strategies.py
activestorage/p5rem/: __init__.py  bootstrap.py  proxy.py
bnl/: bnl_s3test.py  bnl_test.py  bnl_timeseries.py  bnl_timeseries_plot.py  bnl_timeseries_runner.py  common_cl_a.nc  import_test.py  test_missing_gubbins.py
dask-demo/: README.md  demo.py  file.nc
doc/: conf.py  gensidebar.py  index.rst  introduction.rst
doc/data/: home_experiments_bnl.txt  plot_bnl.py  work_experiments_bnl.txt
doc/developer/: overview.rst  server_requirements.rst  wire_protocols.rst  wire_protocols_p5rem.rst  wire_protocols_p5rem_session_setup.rst  wire_protocols_reductionist.rst
doc/figures/: cloud-ha.pu  cloud.pu  deployment-ec.pu  hardware-view1.pu  hardware-view2.pu  hardware-view3.pu  sequence.pu  software-view1.pu  update.sh
doc/p5rem/: design.rst  getting-started.rst  index.rst  user-guide.rst
doc/p5rem/api/: bootstrap.rst  cache.rst  protocol.rst  session.rst
doc/quickstart/: configuration.rst  installation.rst  output.rst  running.rst
doc/uml/: uml_api_surface_v1_headline.puml
docs4understanding/: Logical Process.md  active.md  active_refactor_v7.puml  active_refactor_v8_formats_adapters.puml  axis_flow_v1.puml  axis_support_architecture_v1.puml  reduction_registry_patch.puml  refactor26_v2_260428.md  refactor26_v3_260430.md  uml_api_surface_v1.puml  uml_axis_flow_v2.puml  uml_backend_strategy_v2.puml  uml_core_structures_v2.puml  uml_reduction_registry_v2.puml  uml_storageformat_adapters_v2.puml
docs4understanding/zarr related/: indexer_for_selection.md
docs_Reductionist_deployment/: deploy.md
markdown_writeups/: How Zarr to HDF via kerchunk currently works.md  stack_explained.md
old_code/: PCI_wrapper.py  class_play.py  core.py  modify_zarr.sh  nc_zarr.py  test_harness-learning.py
p5rem/: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
p5rem/doc/: cfdm-file-ownership.md  dataset-file-lifetime.md  design.md  p5netcdf_contract.py  ppfive-integration.md  protocol.md  protocol_sequence.pu  pyfive-lifecycle-findings.md  user-guide.md
p5rem/docs/: conf.py  design.rst  getting-started.rst  index.rst  user-guide.rst
p5rem/docs/api/: bootstrap.rst  cache.rst  index.rst  protocol.rst  proxy.rst  session.rst
p5rem/examples/: coordinates.py  plot_benchmark_summary.py  read_remote_data.py  read_remote_slice.py  remote_benchmarks.py  remote_cfdm_timer.py  setup_remote_mamba_env.sh  test_arcssh.py
p5rem/p5rem/: __init__.py  bootstrap.py  cache.py  protocol.py  proxy.py  remote_server.py  session.py
p5rem/p5rem/server/: __main__.py  stub.py
p5rem/tests/: acid_test.py  conftest.py  integration_helpers.py  roundtrip_assertions.py  server_stub.py  test_bootstrap.py  test_bootstrap_integration.py  test_cache.py  test_cfdm_local.py  test_discover_conda_envs.py  test_integration_helpers.py  test_loopback.py  test_protocol.py  test_proxy.py  test_session_heartbeat.py
p5rem/tests/data/: enum_variable.nc  test1.nc
tests/: conftest.py  integration_helpers.py  roundtrip_assertions.py  test_bigger_data.py  test_byte_order.py  test_compression.py  test_compression_remote_reductionist.py  test_harness-learning.py  test_harness.py  test_missing.py  test_package.py  test_real_https.py  test_real_s3.py  test_real_s3_with_axes.py  test_reductionist_json.py  utils.py
tests/integration/: test_bigger_data.py  test_bootstrap_integration.py  test_byte_order.py  test_cfdm_local.py  test_compression.py  test_compression_remote_reductionist.py  test_harness.py  test_loopback.py  test_missing.py  test_package.py  test_real_https.py  test_real_https_extras.py  test_real_s3.py  test_real_s3_with_axes.py  test_reductionist_json.py  test_roundtrip_integration.py
tests/s3_exploratory/: __init__.py  config_minio.py  parse_pymon.py  test_netcdf4s3.py  test_s3_arrange_files.py  test_s3_performance.py  test_s3_reduction.py  test_s3_singlehdf5tozarr.py
tests/s3_exploratory/minio_scripts/: minio-start
tests/s3_exploratory/test_data/: test_bizarre.nc
tests/test_data/: CMIP6_IPSL-CM6A-LR_tas.nc  cesm2_native_TREFHT.json  cesm2_native_ps.json  daily_data_fullmask.nc  daily_data_masked.nc  obs4MIPS_CERES-EBAF_L3B_Ed2-8_rlut.nc  zero_chunked.nc
tests/unit/: blosc_failed.py  test_active.py  test_active_axis.py  test_active_tools.py  test_bootstrap.py  test_cache.py  test_dummy_data.py  test_mock_s3.py  test_protocol.py  test_proxy.py  test_reductionist.py  test_s3.py  test_s3fs.py  test_session_heartbeat.py  test_storage.py  test_storage_types.py  test_strategies.py
