[build-system]
requires = [
    "setuptools >= 40.6.0",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Valeriu Predoi", email = "valeriu.predoi@ncas.ac.uk"},
    {name = "David Hassell", email = "david.hassell@ncas.ac.uk"},
    {name = "Bryan Lawrence", email = "bryan.lawrence@ncas.ac.uk"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "dask!=2024.8.0",  # github.com/dask/dask/issues/11296
    "fsspec",
    "h5netcdf",
    "netcdf4",
    "numcodecs>=0.12",  # github/issues/162
    "numpy!=1.24.3",  # severe masking bug
    "pyfive>=0.5.0",  # earliest support for advanced Pyfive 
    "requests",
    "s3fs>=2024.2.0",  # see environment.yml for pin reason
    "ujson",
]
description = "A Python client for Active Storage"
license = {text = "BSD License, Version 3-Clause"}
name = "PyActiveStorage"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov>=2.10.1",
    "pytest-html!=2.1.0",
    "pytest-metadata>=1.5.1",
    "pytest-xdist",
    "dask",
    "moto",
]
# build docs
doc = [
    "autodocsumm",
    "sphinx",
    "sphinx_rtd_theme",
]
# to be added when functionality provided
# develop = [
#     "pre-commit",
#     "pylint",
#     "pydocstyle",
# ]

[project.urls]
Code = "https://github.com/NCAS-CMS/PyActiveStorage"
# Documentation = ""
Issues = "https://github.com/NCAS-CMS/PyActiveStorage/issues"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
packages = ["activestorage"]
zip-safe = false  # possibly yes

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.pytest.ini_options]
addopts = [
    "--ignore=old_code/",
    "--ignore=tests/s3_exploratory",
    "--ignore=bnl",
    "--cov=activestorage",
    "--cov-report=xml:test-reports/coverage.xml",
    "--cov-report=html:test-reports/coverage_html",
    "--html=test-reports/report.html",
]

[tool.coverage.run]
parallel = true
source = ["activestorage"]
    
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
