[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "p5rem"
version = "0.1.0"
description = "Remote HDF5 chunk serving and reduction over SSH"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Bryan Lawrence", email = "bryan.lawrence@ncas.ac.uk"}
]
requires-python = ">=3.10"
dependencies = [
    "pyfive>=0.5.0",
    "pyactivestorage",
    "paramiko",
    "numpy>=2.0.0",
    "diskcache",
    "cbor2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx>=7",
    "furo",
    "myst-parser",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["p5rem*"]

[tool.pytest.ini_options]
markers = [
    "integration: optional integration tests requiring external services",
]